const { toHaveUnauthorizedStatus } = require('../../../../src');
const { describe, test, before } = require('node:test');
const { buildServer } = require('../../../helpers/server-helper.js');
const { expect, JestAssertionError } = require('expect');
const { getServerUrl } = require('../../../helpers/server-helper');
const { testClients } = require('../../../helpers/supported-clients');

expect.extend({ toHaveUnauthorizedStatus });

describe('(.not).toHaveUnauthorizedStatus', () => {
  /**
   * @type {string}
   */
  let apiUrl = getServerUrl();

  before(async () => {
    await buildServer();
  });

  for (const testClient of testClients) {
    describe(`using ${testClient.name}`, () => {
      describe('.toHaveUnauthorizedStatus', () => {
        test('passes when response has status code UNAUTHORIZED (401)', async () => {
          const response = await testClient.post(`${apiUrl}/status`, {
            status: 401,
          });

          expect(response).toHaveUnauthorizedStatus();
          expect({ response }).toEqual({
            response: expect.toHaveUnauthorizedStatus(),
          });
        });

        test(`fails when response have other status code`, async (t) => {
          // Should have the assert snapshot assertion
          t.plan(1);

          const response = await testClient.post(`${apiUrl}/status`, {
            status: 200,
          });

          try {
            expect(response).toHaveUnauthorizedStatus();
          } catch (e) {
            t.assert.snapshot(e);
          }

          // Not using snapshot in the test as the error will contain the entire response
          // plus dynamic values
          expect(() => {
            expect({ response }).toEqual({
              response: expect.toHaveUnauthorizedStatus(),
            });
          }).toThrowError(JestAssertionError);
        });
      });

      describe('.not.toHaveUnauthorizedStatus', () => {
        test('passes when got other status code', async () => {
          const response = await testClient.post(
            `${apiUrl}/status`,
            {
              status: 200,
            },
            {},
          );

          expect(response).not.toHaveUnauthorizedStatus();

          expect({ response }).toEqual({
            response: expect.not.toHaveUnauthorizedStatus(),
          });
        });

        test(`fails when response have status code 401`, async (t) => {
          // Should have the assert snapshot assertion
          t.plan(1);

          const response = await testClient.post(`${apiUrl}/status`, {
            status: 401,
          });

          try {
            expect(response).not.toHaveUnauthorizedStatus();
          } catch (e) {
            t.assert.snapshot(e);
          }

          // Not using snapshot in the test as the error will contain the entire response
          // plus dynamic values
          expect(() => {
            expect({ response }).toEqual({
              response: expect.not.toHaveUnauthorizedStatus(),
            });
          }).toThrowError(JestAssertionError);
        });
      });
    });
  }
});
